# Topic-modelling-Loc

./: .gitignore  AppCMDB_Info  __init__.py  dummy.py  pyproject.toml  requirements.txt  setup.py
centralized_nlp_package/configs/: config.yaml
centralized_nlp_package/data_access/: snowflake_utils.py
centralized_nlp_package/embedding/: embedding_utils.py  word2vec_model.py
centralized_nlp_package/pipelines/: Embedding_creation.py  Embedding_search.py
centralized_nlp_package/preprocessing/: ngram_utils.py  text_preprocessing.py  text_processing.py
centralized_nlp_package/psycholinguistics/: psycholinguistic_analyzer.py
centralized_nlp_package/text_processing/: text_analysis.py  text_utils.py
centralized_nlp_package/utils/: config.py  helpers.py  logging_setup.py
centralized_nlp_package/visualization/: umap_viz.py
docs/: CNAME  conf.py  index.rst
docs/source/: nli_process.rst  processing.rst  reports.rst
pipelines/: Aug24_SF_Equities_pipline.py  Embedding_creation.py  Embedding_search.py  Macro_inno_Daily_pipeline.py  MassLabor_Macro_pipeline.py  nli_batch_processing.py
tests/: test_preprocessing.py  test_report_generation.py  test_text_analysis.py  test_text_preprocessing.py
topic_modelling_package/: __init__.py
topic_modelling_package/config/: config.yaml
topic_modelling_package/nli_process/: __init__.py  data_prep.py  inference.py  scoring.py  transformation.py
topic_modelling_package/processing/: __init__.py  match_operations.py
topic_modelling_package/reports/: __init__.py  report_generation.py  transformations.py
(+58 files in other folders)
