[tool.poetry]
name = "topic_modelling_package"
version = "0.1.0"
description = ""
authors = ["santhosh <skumarr53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.20"
centralized-nlp-package = { url = "https://raw.githubusercontent.com/Skumarr53/cnp/main/dist/centralized_nlp_package-0.1.0-py3-none-any.whl" }
sphinx-autodoc-typehints = "^2.0"
furo = "^2024.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
