[tool.poetry]
name = "topic_modelling_package"
version = "0.1.0"
description = ""
authors = ["santhosh <skumarr53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
centralized-nlp-package = { path = "/dbfs/mnt/access_work/centralized-nlp-package/centralized_nlp_package-0.1.1-py3-none-any.whl" }
furo = "^2024.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
